# worklone

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  INTEGRATION_GUIDE.md  LICENSE  README.md  SCALING_ARCHITECTURE.md  SCALING_PLAN.md  SECURITY.md  changes.md  coming_soon.json  docker-compose.yml  plan.md  requirements.txt  simulated_emails.json  start.sh
sdk/: README.md  demo.py  demo_gmail.py  pyproject.toml  test_sdk.py
sdk/worklone_employee/: __init__.py  employee.py  types.py
sdk/worklone_employee.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/worklone_employee/agents/: react_agent.py
sdk/worklone_employee/db/: database.py  store.py
sdk/worklone_employee/evolution/: background_review.py  evolution_store.py
sdk/worklone_employee/integrations/: __init__.py  base.py
sdk/worklone_employee/integrations/github/: __init__.py  add_assignees.py  add_labels.py  cancel_workflow_run.py  check_star.py  close_issue.py  close_pr.py  comment.py  compare_commits.py  create_branch.py  create_comment_reaction.py  create_file.py  create_gist.py  create_issue.py  create_issue_reaction.py  create_milestone.py  create_pr.py  create_project.py  create_release.py  delete_branch.py  delete_comment.py  delete_comment_reaction.py  delete_file.py  delete_gist.py  delete_issue_reaction.py  delete_milestone.py  fork_gist.py  (+57 more)
sdk/worklone_employee/logging/: __init__.py  logger.py
sdk/worklone_employee/providers/: __init__.py  config.py  llm_provider.py
sdk/worklone_employee/tools/: base.py  catalog.py  registry.py
sdk/worklone_employee/workflows/: utils.py
(+3014 files in other folders)
