[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worklone-employee"
version = "0.1.0"
description = "Autonomous AI employees with ReAct loop, evolution, and 250+ integrations"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worklone_employee*"]
